--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -6,30 +6,41 @@ on:
       branch:
         description: 'Branch to run tests on'
         required: true
-        default: 'feature'  # Default branch to run the tests on
+        default: 'feature'
 
 jobs:
   test:
-    runs-on: windows-latest  # Run on Windows
+    runs-on: windows-latest
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3  # This checks out the code from the repository
+      uses: actions/checkout@v3
       with:
-        ref: ${{ github.event.inputs.branch }}  # Use the branch input from the manual trigger
+        ref: ${{ github.event.inputs.branch }}
 
     - name: Set up Java 17
       uses: actions/setup-java@v3
       with:
-        java-version: '17'  # Specify Java version 17
-        distribution: 'temurin'  # Specify the Java distribution (Temurin is the recommended option)
+        java-version: '17'
+        distribution: 'temurin'
 
-    - name: Set ChromeDriver path and Chrome path
+    - name: Install Chrome and ChromeDriver
+      uses: actions/setup-chrome@v1  # Automatically installs Chrome and ChromeDriver
+      with:
+        chrome-version: latest  # Ensures the latest version of Chrome is installed
+
+    - name: Configure Chrome environment variables
       run: |
-        # Set the path to ChromeDriver and Chrome executable
-        echo "CHROMEDRIVER_PATH=C:\\path\\to\\chromedriver" >> $GITHUB_ENV  # Set the path to your locally installed ChromeDriver
-        echo "CHROME_PATH=C:\\Program Files\\Google\\Chrome\\Application\\chrome.exe" >> $GITHUB_ENV  # Set the path to your locally installed Chrome
-        echo "CHROME_HEADLESS=false" >> $GITHUB_ENV  # Set Chrome to run in non-headless mode (default mode)
+        echo "CHROME_HEADLESS=true" >> $GITHUB_ENV  # Set Chrome to run in headless mode
 
-    - name: Run Tests
+    - name: Create reports directory
+      run: mkdir -p $GITHUB_WORKSPACE/reports  # Ensure the reports directory exists
+
+    - name: Run Maven Tests
       run: mvn test -Dextent.report.path=$GITHUB_WORKSPACE/reports/ExtentReport.html
+
+    - name: Upload Extent Report
+      uses: actions/upload-artifact@v3
+      with:
+        name: ExtentReport
+        path: $GITHUB_WORKSPACE/reports/ExtentReport.html
