--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,6 @@
 
   <properties>
     <!-- Specify paths and Java version -->
-    <!-- Use a relative path that will work on all systems (including GitHub Actions) -->
     <extent.report.path>${project.build.directory}/ExtentReports/extentReports.html</extent.report.path>
     <maven.compiler.source>17</maven.compiler.source>
     <maven.compiler.target>17</maven.compiler.target>
@@ -41,6 +40,20 @@
           </systemPropertyVariables>
         </configuration>
       </plugin>
+
+      <!-- ExtentReports Maven Plugin for generating reports -->
+      <plugin>
+        <groupId>com.aventstack</groupId>
+        <artifactId>extentreports-maven-plugin</artifactId>
+        <version>1.0.9</version>
+        <executions>
+          <execution>
+            <goals>
+              <goal>report</goal>
+            </goals>
+          </execution>
+        </executions>
+      </plugin>
     </plugins>
   </build>
 
@@ -72,11 +85,11 @@
       <version>5.1.2</version>
     </dependency>
     <!-- Modernized Log4j Dependencies -->
-   <dependency>
-    <groupId>log4j</groupId>
-    <artifactId>log4j</artifactId>
-    <version>1.2.17</version>
-</dependency>
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <version>1.2.17</version>
+    </dependency>
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-core</artifactId>
