--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -6,6 +6,7 @@ on:
         description: 'Branch to run tests on'
         required: true
         default: 'feature'
+
 jobs:
   test:
     runs-on: windows-latest
@@ -14,20 +15,24 @@ jobs:
       uses: actions/checkout@v3
       with:
         ref: ${{ github.event.inputs.branch }}
+    
     - name: Set up Java 17
       uses: actions/setup-java@v3
       with:
         java-version: '17'
         distribution: 'temurin'
+    
     - name: Set environment variables for Chrome
-      run: |
-        echo "CHROME_HEADLESS=false" >> $GITHUB_ENV
+      run: echo CHROME_HEADLESS=false >> $env:GITHUB_ENV
+    
     - name: Create reports directory
-      run: mkdir -p ${{ github.workspace }}/reports
+      run: mkdir ${{ github.workspace }}\reports
+    
     - name: Run Maven Tests
-      run: mvn clean test -Dextent.report.path=${{ github.workspace }}/reports/extentReport.html
+      run: mvn clean test -D"extent.report.path=${{ github.workspace }}\reports\extentReport.html"
+    
     - name: Upload Extent Report
       uses: actions/upload-artifact@v3
       with:
         name: ExtentReport
-        path: ${{ github.workspace }}/reports/extentReport.html
+        path: ${{ github.workspace }}\reports\extentReport.html
