--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -29,10 +29,10 @@ jobs:
       run: mkdir ${{ github.workspace }}\reports
     
     - name: Run Maven Tests with Extent Reports
-      run: mvn clean test -DsuiteXmlFile=testngexplore.xml -Dmaven.test.failure.ignore=true
+      run: mvn clean test -Dmaven.test.failure.ignore=true
     
     - name: Upload Extent Report
       uses: actions/upload-artifact@v3
       with:
         name: ExtentReport
-        path: ${{ github.workspace }}\ExtentReports\extentReport.html
+        path: ${{ github.workspace }}\ExtentReports\extentReports.html
