--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,4 +1,5 @@
 name: Run Tests
+
 on:
   workflow_dispatch:
     inputs:
@@ -6,27 +7,34 @@ on:
         description: 'Branch to run tests on'
         required: true
         default: 'feature'
+
 jobs:
   test:
     runs-on: windows-latest
+
     steps:
+    # Step 1: Checkout the code
     - name: Checkout code
       uses: actions/checkout@v3
       with:
         ref: ${{ github.event.inputs.branch }}
-    
+
+    # Step 2: Set up Java 17
     - name: Set up Java 17
       uses: actions/setup-java@v3
       with:
         java-version: '17'
         distribution: 'temurin'
-    
+
+    # Step 3: Set environment variables for Chrome
     - name: Set environment variables for Chrome
       run: echo CHROME_HEADLESS=false >> $env:GITHUB_ENV
-    
+
+    # Step 4: Run Maven Tests with Extent Reports
     - name: Run Maven Tests with Extent Reports
-      run: mvn test -Dmaven.test.failure.ignore=true
-    
+      run: mvn -Dmaven.test.failure.ignore=true test
+
+    # Step 5: Upload Extent Report
     - name: Upload Extent Report
       uses: actions/upload-artifact@v3
       with:
