--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -32,7 +32,7 @@ jobs:
 
     # Step 4: Run Maven Tests with Extent Reports
     - name: Run Maven Tests with Extent Reports
-      run: mvn -Dmaven.test.failure.ignore=true test
+      run: mvn test -Dmaven.test.failure.ignore=true
 
     # Step 5: Upload Extent Report
     - name: Upload Extent Report
