--- a/pom.xml
+++ b/pom.xml
@@ -121,4 +121,12 @@
     </dependency>
   </dependencies>
 
+  <!-- Add JCenter Repository -->
+  <repositories>
+    <repository>
+      <id>jcenter</id>
+      <url>https://jcenter.bintray.com/</url>
+    </repository>
+  </repositories>
+
 </project>
