--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,13 @@
           </includes>
         </configuration>
       </plugin>
+
+      <!-- Maven Site Plugin (updated version to fix the missing DocumentContent class error) -->
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-site-plugin</artifactId>
+        <version>3.9.1</version> <!-- Updated version -->
+      </plugin>
     </plugins>
   </build>
 
