--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,10 +29,15 @@ jobs:
         echo "CHROME_HEADLESS=false" >> $GITHUB_ENV  # Set Chrome to run in headless mode
 
     - name: Run Maven Tests and Generate Report
-      run: mvn clean test site  # Runs tests and generates the Extent report
+      run: mvn clean test  # Running only 'clean test' to generate reports
+
+    - name: List contents of target directory
+      run: ls -R target  # List files in target directory to verify report location
 
     - name: Upload Extent Report as artifact
       uses: actions/upload-artifact@v3
       with:
         name: extent-report
         path: target/ExtentReports/extentReports.html  # Path to the generated Extent report
+        if-no-files-found: warn
+        include-hidden-files: false
