--- a/.github/workflows/CreateReports.yml
+++ b/.github/workflows/CreateReports.yml
@@ -38,3 +38,16 @@ jobs:
         path: ExtentReports/*
         if-no-files-found: warn
         include-hidden-files: false
+
+    - name: Send Email with Report
+      uses: dawidd6/action-send-mail@v3
+      with:
+        server_address: smtp.gmail.com
+        server_port: 587
+        username: ${{ secrets.EMAIL_USERNAME }}
+        password: ${{ secrets.EMAIL_PASSWORD }}
+        to: 'recipient@example.com'
+        subject: 'Automation Test Results'
+        body: 'Here is the test report.'
+        attachments: 'target/ExtentReports/extentReports.html'  # Path to your Extent report
+
