--- a/.github/workflows/CreateReports.yml
+++ b/.github/workflows/CreateReports.yml
@@ -46,7 +46,7 @@ jobs:
         server_port: 587
         username: ${{ secrets.EMAIL_USERNAME }}
         password: ${{ secrets.EMAIL_PASSWORD }}
-        to: 'recipient@example.com'
+        to: 'ramesharavindhkarthikeyan.qa@gmail.com'
         subject: 'Automation Test Results'
         body: 'Here is the test report.'
         attachments: 'target/ExtentReports/extentReports.html'  # Path to your Extent report
