--- a/.github/workflows/CreateReports.yml
+++ b/.github/workflows/CreateReports.yml
@@ -46,8 +46,8 @@ jobs:
         server_port: 587
         username: ${{ secrets.EMAIL_USERNAME }}
         password: ${{ secrets.EMAIL_PASSWORD }}
-        to: 'ramesharavindhkarthikeyan.qa@gmail.com'
-        subject: 'Automation Test Results'
-        body: 'Here is the test report.'
-        attachments: 'target/ExtentReports/extentReports.html'  # Path to your Extent report
-
+        to: ramesharavindhkarthikeyan.qa@gmail.com
+        from: ${{ secrets.EMAIL_USERNAME }}  # Add this line for the 'from' email
+        subject: Automation Test Results
+        body: Here is the test report.
+        attachments: target/ExtentReports/extentReports.html
