--- a/.github/workflows/CreateReports.yml
+++ b/.github/workflows/CreateReports.yml
@@ -22,24 +22,30 @@ jobs:
       uses: actions/checkout@v3
       with:
         ref: ${{ github.event.inputs.branch }}
+        
     - name: Set up Java 17
       uses: actions/setup-java@v3
       with:
         java-version: '17'
         distribution: 'temurin'
+        
     - name: Set environment variables for Chrome
       run: |
         echo "CHROME_HEADLESS=false" >> $GITHUB_ENV  # Set Chrome to run in headless mode
+        
     - name: Run Maven Tests and Generate Report
       run: mvn clean test  # Running tests to generate reports
-    - name: Upload Extent Report as artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: extent-report
-        path: ExtentReports/*
-        if-no-files-found: warn
-        include-hidden-files: false
-    - name: Send Email with Report
+
+    - name: Read the HTML report and embed it in the email body
+      id: embed-report
+      run: |
+        # Read the content of the extentReports.html into a variable
+        REPORT_BODY=$(cat ExtentReports/extentReports.html)
+        echo "REPORT_BODY<<EOF" >> $GITHUB_ENV
+        echo "$REPORT_BODY" >> $GITHUB_ENV
+        echo "EOF" >> $GITHUB_ENV
+
+    - name: Send Email with Embedded Report
       uses: dawidd6/action-send-mail@v4
       with:
         server_address: smtp.gmail.com
@@ -47,7 +53,6 @@ jobs:
         username: ${{ secrets.EMAIL_USERNAME }}
         password: ${{ secrets.EMAIL_PASSWORD }}
         to: ramesharavindhkarthikeyan.qa@gmail.com
-        from: ${{ secrets.EMAIL_FROM }}  # Updated to use EMAIL_FROM secret
+        from: ${{ secrets.EMAIL_FROM }}
         subject: ${{ github.event.inputs.email_subject }}
-        body: ${{ github.event.inputs.email_body }}
-        attachments: extentReports.html
+        body: ${{ github.event.inputs.email_body }}<br><br>${{ env.REPORT_BODY }}  # Embedding the HTML content from the file
